--- a/Templates/cono.html
+++ b/Templates/cono.html
@@ -9,46 +9,63 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title> Calculadora de SupVol</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title> Calculadora SupVol</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="text/javascript" src="misFunciones.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
 <body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
+            <a href="volumenes.html" class="brand-logo left"><i class="material-icons">arrow_back</i></a>
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
-    <header>
-        <h1 id="mainTitulo">Calculo de Volumenes</h1>
-    </header>
     <section>
-        <div class="container">
-                <div class="row center">
-                    <a href="cubo.html" class="btn-large waves-effect waves-light orange">CUBO</a>
-                    <a href="cilindro.html" class="btn-large waves-effect waves-light orange">CILINDRO</a>
-                </div>
-                <div class="row center">
-                    <a href="esfera.html" class="btn-large waves-effect waves-light orange">ESFERA</a>
-                    <a href="cono.html" class="btn-large waves-effect waves-light orange">CONO</a>
-                </div>
-        </div>
+    <header>
+            <h1 id="mainTitulo">CONO</h1>
+        </header>
+    <div>
+        <h5 class="header center black-text">Formula: π.Radio².Altura/3</h5>
+    </div>
+    <div class="row center">
+        <a href="tcono.html" class="waves-effect waves-teal btn-flat"> Teoria en Profundidad</a>
+    </div>
     </section>
     <section>
-        <h3 id="tituloSecun"> ¿Que se conoce como Volumen?</h3>
-        <div class="row valign-wrapper">
-                <div class="col s6 offset-s3 valign">
-                <div class="card-panel teal">
-                <span class="white-text">
-                    Se entiende por volumen a una magnitud métrica, euclideana y de tipo escalar, 
-                    que se puede definir como la extensión de un objeto en sus tres dimensiones, es decir,
-                    tomando en cuenta su longitud, ancho y altura. Los cuerpos físicos todos ocupan un espacio,
-                    que varía según sus proporciones, y la medida de dicho espacio es el volumen.
-                </span>
+            <div class="row center">
+                <div class="input-field inline">
+                    <input id="Valor_RCono" type="number" class="validate">
+                    <label>Radio</label>
+                    Unidad en Metros
                 </div>
-            </div>
+                <div class="input-field inline">
+                    <input id="Valor_ACono" type="number" class="validate">
+                    <label>Altura</label>
+                    Unidad en Metros
+                </div>
+            </div>         
+    </section>
+    <section>
+        <div class="row center">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+                <i class="material-icons right">send</i>
+            </button>
+        </div>
+        <div>
+            <h5 id="titSup">Volumen del Cono</h5>
+        </div>
+        <div class="row center">
+            Resultado=
+        <div id="SCono" class="input-field inline">
+            <input id="SConoInput" class="validate"> Metros Cubicos
+        </div>
+        <div>
+            <h6>Grafico del Cono</h6>
+        </div>
+        <canvas id="myCanvas">
+        </canvas>
         </div>
     </section>
     <footer class="page-footer orange">
