--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -37,12 +37,12 @@
     <section>
             <div class="row center">
                 <div class="input-field inline">
-                    <input id="Valor_1" type="number" class="validate">
+                    <input id="Valor_BRectangulo" type="number" class="validate">
                     <label>Base</label>
                     Unidad en Metros
                 </div>
                 <div class="input-field inline">
-                    <input id="Valor_2" type="number" class="validate">
+                    <input id="Valor_ARectangulo" type="number" class="validate">
                     <label>Altura</label>
                     Unidad en Metros
                 </div>
@@ -50,7 +50,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supRect()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
