--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -36,12 +36,12 @@
     <section>
             <div class="row center">
                 <div class="input-field inline">
-                    <input id="Valor_1" type="number" class="validate">
+                    <input id="Valor_BTriangulo" type="number" class="validate">
                     <label>Base</label>
                     Unidad en Metros
                 </div>
                 <div class="input-field inline">
-                    <input id="Valor_2" type="number" class="validate">
+                    <input id="Valor_ATriangulo" type="number" class="validate">
                     <label>Altura</label>
                     Unidad en Metros
                 </div>
@@ -49,7 +49,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supTrian()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
