--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -36,14 +36,14 @@
     <section>
         <div class="row center">
             <div class="input-field inline">
-                <input id="Valr_L" type="number" class="validate">
+                <input id="Valor_RCirculo" type="number" class="validate">
                 <label>Radio</label>
                 Unidad en Metros
         </div>    
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCirc()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
