--- a/Templates/cubo.html
+++ b/Templates/cubo.html
@@ -44,7 +44,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="volCubo()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
