--- a/Templates/cono.html
+++ b/Templates/cono.html
@@ -49,7 +49,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="volCono()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
