--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -64,3 +64,20 @@ body {
     margin: 10px;
     padding: 5px 30px;
 }
+
+.icon-block {
+    padding: 0 15px;
+}
+
+.icon-block .material-icons {
+    font-size: inherit;
+}
+
+ul:not(.browser-default) {
+    padding-left: 0;
+    list-style-type: none;
+}
+  
+ul:not(.browser-default) > li {
+list-style-type: none;
+}
