--- a/Templates/index.html
+++ b/Templates/index.html
@@ -33,17 +33,39 @@
             </div>
     </section>
     <section>
-        <h4 id="tituloSecun"> ¿Que hace este programa Web?</h4>
-        <div class="row valign-wrapper">
-                <div class="col s6 offset-s3 valign">
-                <div class="card-panel teal">
-                <span class="white-text">
-                    Un programa diseñado para calcular la superficie y volumenes de distintas
-                    figuras geometricas.
-                </span>
-                </div>
+        <div class="row">
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                <h5 class="center">Optimizado para uso</h5>
+                <p class="light">El programa esta optimizado sin ser muy cargado, para que
+                    no ande trabado o tarde mucho en cargar, de esta manera rapido y eficaz 
+                    para ser utilizado.
+                </p>
+              </div>
             </div>
-        </div>
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                <h5 class="center">¿Para que sirve esta aplicacion Web?</h5>
+                <p class="light">Esta aplicacion en web consiste en brindar una solucion rapida para realizar calculos rapidos de:
+                </p>
+                <ul class="browser-default">
+                    <li>La superficie de distintas figuras geometricas.</li>
+                    <li>El volumen de distintas figuras geometricas.</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                <h5 class="center">Sencillo de Usar</h5>
+                <p class="light">Se puso mucha concentracion en la experiencia de Usuario
+                    para que sea lo mas facil y dinamico de utilizar.
+                </p>
+              </div>
+            </div>
+          </div>
     </section>
     <footer class="page-footer orange">
             <div id="divGen" class="container">
