--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -43,7 +43,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCuad()">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCuad();dibujarCuad()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
