--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -50,7 +50,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supRect()">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supRect();dibujarRect()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
