--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -44,7 +44,7 @@
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCirc();dibujarCirc()">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCirc(); dibujar()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
